--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "opencv-ts": "^1.3.6",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13"
   },
