--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tsx": "^4.19.3",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
+    "vite-plugin-wasm": "^3.4.1",
     "vue-tsc": "^2.2.0"
   }
 }
